# speedtest

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  install_speedtest_service.sh  mac.txt  monitor.py  monitor_ddd_cpp_raspberry_pi.cpp  package-lock.json  package.json  requirements.txt  test.js
src/: main.cpp
src/app/: MonitorService.cpp  MonitorService.hpp
src/domain/: EmailSender.hpp  Logger.hpp  MacProvider.hpp  NetworkAdapter.hpp  Relay.hpp  Report.hpp  SpeedTester.hpp
src/infra/: CurlEmailSender.cpp  CurlEmailSender.hpp  FileCsvLogger.cpp  FileCsvLogger.hpp  JsSpeedTester.hpp  LinuxNetworkAdapter.cpp  LinuxNetworkAdapter.hpp  MacListProvider.cpp  MacListProvider.hpp  OoklaSpeedTester.cpp  OoklaSpeedTester.hpp  WiringPiRelay.hpp
src/util/: Env.cpp  Env.hpp  Process.cpp  Process.hpp  Time.cpp  Time.hpp
